--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,10 +1,12 @@
 * {
+    padding: 0rem;
+    margin: 0rem;
+    box-sizing: border-box;
     font-family: 'Inter', sans-serif;
 }
 
 body {
-    padding: 0rem;
-    margin: 0rem;
+    
     background: $background-color;
 }
 
