--- a/src/styles/components/_design-section.scss
+++ b/src/styles/components/_design-section.scss
@@ -7,9 +7,17 @@
     align-items: center;
     
     
-    h1 {
-        font-size: $h1-size;
-        letter-spacing: $standard-letter-spacing;
+    @media screen and (min-width:601px) {
+        h1 {
+            font-size: $h1-size;
+            letter-spacing: $standard-letter-spacing;
+        }
+    }
+
+    @media screen and (max-width:600px) {
+        h1 {
+            font-size: 30px;
+        }
     }
 
 }
