--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,6 +1,5 @@
 .navbar {
    padding: 1rem;
-   position: fixed;
     ul {
         display: flex;
         flex-direction: row;
@@ -27,10 +26,28 @@
     }
   
     h2 {
-        padding: 0;
-        margin: 0;
-        font-weight: 100;
+        
+        
         font-size: $h2-size;
+    }
+
+    @media screen and (min-width:601px) {
+        h2 {
+            font-size: $h2-size;
+            letter-spacing: $standard-letter-spacing;
+            font-weight: 100;
+            padding: 0;
+            margin: 0;
+        }
+    }
+
+    @media screen and (max-width:600px) {
+        h2 {
+            font-size: 10px;
+            padding: 0;
+            margin: 0;
+            font-weight: 100;
+        }
     }
 
    
