starting the styling for the mobile version

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,16 +5,35 @@
     font-family: 'Inter', sans-serif;
 }
 
-body {
-    
-    background: $background-color;
+
+
+@media screen and (max-width:600px) {
+    body {
+        background-color: $h1-color;
+    }
 }
 
+@media screen and (min-width:601px) {
+    body {
+    
+        background: $background-color;
+    }
+}
 
 h1 {
     color: $h1-color
 }
 
-main {
-    background: $background-color;
+
+
+@media screen and (min-width:601px) {
+    main {
+        background: $background-color;
+    }
+}
+
+@media screen and (max-width:600px) {
+    main {
+        background-color: $h1-color;
+    }
 }
