--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -26,8 +26,9 @@
 }
 
 @media screen and (min-width:601px) {
-    div.navbar{
+    .navbar {
         padding: 1rem;
+        align-items: center;
         ul {
             display: flex;
             flex-direction: row;
@@ -56,13 +57,10 @@
 }
 
 @media screen and (max-width:600px) {
-   div.navbar{
-    padding-top: 1rem;
-    padding-left: 3px;
-    padding-bottom: 1rem;
-    padding-right: 0px;
+   nav.navbar{
+    padding: 2rem;
     background: $background-color;
-    width: 100vh;
+    width: 100%;
     ul {
         display: flex;
         flex-direction: row;
@@ -80,6 +78,7 @@
         text-decoration: none;
         color: white;    
         padding: 1rem;
+        font-size: 1.1rem;
     }
 
     a:hover {
@@ -87,5 +86,7 @@
         background-color: $h1-color;
         opacity: 40%;
     }
+
+    
    }
 }
