design section styling-mobile

--- a/src/styles/components/_design-section.scss
+++ b/src/styles/components/_design-section.scss
@@ -9,7 +9,7 @@
 
     @media screen and (max-width:600px) {
         h1 {
-            font-size: 40px;
+            font-size: 3rem;
             background: $background-color;
             background-clip: text;
             -webkit-text-fill-color: transparent;
