--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,60 +1,60 @@
-.navbar {
-  
+
+// DESKTOP 
 
     @media screen and (min-width:601px) {
-        h2 {
-            font-size: $h2-size;
-            letter-spacing: $standard-letter-spacing;
-            font-weight: 100;
-            padding: 0;
-            margin: 0;
-        }
-    }
-
-    @media screen and (max-width:600px) {
-        h2 {
-            font-size: 10px;
-            padding: 0;
-            margin: 0;
-            font-weight: 300;
-        }
-    }
-
-   
-
-    
-}
-
-@media screen and (min-width:601px) {
-    .navbar {
-        padding: 1rem;
-        align-items: center;
-        ul {
+        .navbar {
+            margin: 0px;
+            position: fixed;
             display: flex;
             flex-direction: row;
             justify-content: center;
-            align-items: center;
-            li {
-                list-style: none;
+            vertical-align: middle;
+            width: 100%;
+            background-color: $background-color;
+            border-bottom: 1px solid $h1-color;
+            opacity: 70%;
+            
+
+            ul {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                li {
+                    list-style: none;
+                }
+                
+                
             }
-            
-            
+        
+        
+            a {
+                text-decoration: none;
+                color: white;    
+                padding: 1rem;
+            }
+        
+            a:hover {
+                color: black;
+                background-color: $h1-color;
+                opacity: 40%;
+            }
+
+            h2 {
+                font-size: 0.8rem;
+                letter-spacing: $standard-letter-spacing;
+                font-weight: 300;
+                padding: 0;
+                margin: 0;
+            }
         }
-    
-    
-        a {
-            text-decoration: none;
-            color: white;    
-            padding: 1rem;
-        }
-    
-        a:hover {
-            color: black;
-            background-color: $h1-color;
-            opacity: 40%;
-        }
+       
     }
-}
+
+
+
+    
+// MOBILE
+
 
 @media screen and (max-width:600px) {
    nav.navbar{
@@ -88,6 +88,11 @@
         opacity: 40%;
     }
 
-    
+    h2 {
+        font-size: 10px;
+        padding: 0;
+        margin: 0;
+        font-weight: 300;
+    }
    }
 }
