--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -7,18 +7,19 @@
             position: fixed;
             display: flex;
             flex-direction: row;
-            justify-content: center;
+            justify-content: space-between;
             vertical-align: middle;
-            width: 100%;
+            width: 90rem;
             background-color: $background-color;
             border-bottom: 1px solid $h1-color;
             opacity: 70%;
-            
+            padding: 0rem 0rem 0rem 5rem;
 
             ul {
+                padding-top: 1rem;
                 display: flex;
                 flex-direction: row;
-                justify-content: center;
+                justify-content: end;
                 li {
                     list-style: none;
                 }
@@ -40,11 +41,19 @@
             }
 
             h2 {
-                font-size: 0.8rem;
+                font-size: 0.9rem;
                 letter-spacing: $standard-letter-spacing;
                 font-weight: 300;
                 padding: 0;
                 margin: 0;
+            }
+
+            img {
+                height: 5rem;
+                width: auto;
+            }
+            img:hover {
+                opacity: 100%;
             }
         }
        
@@ -62,7 +71,9 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
     background: $background-color;
-    width: 100%;
+    width: 30rem;
+    padding: 0.4rem 0rem 0rem 5rem;
+
     ul {
         display: flex;
         flex-direction: row;
@@ -94,5 +105,10 @@
         margin: 0;
         font-weight: 300;
     }
+   }
+
+   img {
+    width: 40px;
+    height: auto;
    }
 }
