--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -5,6 +5,7 @@ $background-color-end: #2e017e;
 $second-gradient: linear-gradient(90deg, rgba(113,10,10,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
 
 $section-height: 100vh;
+$padding:10% 0% 0% 10%;
 
 $h1-color: #f0def4;
 $h2-pink: #FFACC7;
