--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,4 +4,5 @@
 @import './components/layout';
 @import './components/design-section';
 @import './components/landing';
-@import './components/navbar'
+@import './components/navbar';
+@import './components/footer';
