--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -2,10 +2,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 100%;
+    background: $background-color;
    .logo {
+    padding: 1rem 0rem 0rem 2rem;
      img {
         height: 5rem;
         width: auto;
+        
      }
    }
    ul {
@@ -14,7 +18,14 @@
     justify-content: left;
     li {
         list-style-type: none;
-        padding: 1rem;
+        padding: 1rem 1rem 0rem 1rem;
+       h3 {
+        font-size: 0.9rem;
+        a {
+          color: white;
+        }
+       }
+        
     }
    }
 }
