--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -4,9 +4,10 @@ main {
         padding: $padding;
         font-size: 7rem;
         font-weight: 500;
-        background: $background-color;
+        background: linear-gradient(90deg, rgba(38,49,89,1) 0%, rgba(151,199,255,1) 100%);
         background-clip: text;
         -webkit-text-fill-color: transparent;
+        text-transform: uppercase;
     }
     .section {
         height: 100vh;
