--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,5 +1,5 @@
 $background-color-start: rgb(133,10,10);
-$background-color:  linear-gradient(90deg, rgba(10,113,104,1) 0%, rgba(65,4,93,1) 60%, rgba(46,1,126,1) 84%);
+$background-color: #263159;
 $background-color-end: #2e017e;
 
 $second-gradient: linear-gradient(90deg, rgba(113,10,10,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
@@ -8,7 +8,7 @@ $section-height: 100vh;
 $padding:10% 0% 0% 10%;
 
 $h1-color: #f0def4;
-$h2-pink: #FFACC7;
+$h2-pink: rgba(255, 172, 199, 1);
 $h2-orange:#F5B971;
 $h1-size: 7rem;
 $h2-size: 1rem;
